deploy/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-front-end
spec:
  template:
    spec:
      containers:
      - name: validator-front-end
        volumeMounts:
        - name: frontend-env-js-volume
          mountPath: /usr/share/nginx/html/env.js
          subPath: env.js
        - $patch: replace
