deploy/scaling-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-api-public
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-front-end
spec:
  replicas: 1
